--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,6 +8,24 @@
   padding-bottom: 40px;
   background-color: var(--joy-palette-background-surface);
 }
+
+.swiper::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: repeat;
+  background-size: 40px;
+  opacity: 0.05;
+  background-image: url("/assets/logo_light.svg");
+}
+
+[data-joy-color-scheme="light"] .swiper::before {
+  background-image: url("/assets/logo_dark.svg");
+}
+
 .smallSwiper {
   padding: 16px;
 }
