--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,8 +4,7 @@
 
 .swiper {
   width: 100%;
-  padding: 30px;
-  padding-bottom: 40px;
+  padding: 35px 60px;
   background-color: var(--joy-palette-background-surface);
 }
 
